--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -9,10 +9,6 @@
                border-width: 3px;
                color:white;
              }
-             h4{
-               font-family: 'Courier New';
-               color:white;  
-             }
              h5{
                font-family: 'Courier New';
                color:white;  
@@ -27,6 +23,7 @@
                box-sizing: border-box;
                height:60px;
                font-size: 20px;
+               font-family: monospace;
              }
 
              input[type=submit] {
@@ -43,14 +40,18 @@
                -webkit-transition-duration: 0.4s; 
                transition-duration: 0.4s;
                width: 1350px;
+               font-family: monospace;
              }
              input[type=submit]:hover{
                box-shadow: 0 12px 16px 0 rgb(255, 255, 255),0 17px 50px 0 rgba(255, 255, 255, 0.19);
 
              }
-             label{
+             center{
                   color:white;
-                  font-size:60px;
+                  font-size:80px;
+                  text-align: center;
+                  border-style:solid;
+                  border-width: 3px;
              }
              button{
                background-color: #4CAF50; 
@@ -66,20 +67,44 @@
                -webkit-transition-duration: 0.4s; 
                transition-duration: 0.4s;
                width: 1350px;
+               font-family: monospace;
              }
              button:hover{
                box-shadow: 0 12px 16px 0 rgb(255, 255, 255),0 17px 50px 0 rgba(255, 255, 255, 0.19);
              }
+             .typewriter h1,center {
+                color: #fff;
+                font-family: monospace;
+                overflow: hidden; 
+                border-right: .15em solid orange; 
+                white-space: nowrap; 
+                margin: 0 auto; 
+                letter-spacing: .15em; 
+                animation: 
+                  typing 2s steps(30, end),
+                  blink-caret .5s;
+             }
+             @keyframes typing {
+                from { width: 0 }
+                to { width: 100% }
+             }
+             @keyframes blink-caret {
+                from, to { border-color: transparent }
+                50% { border-color: orange }
+             }
         </style>
    </head>
    <body bgcolor="black">
-   <form method="POST">
-          <label for="Btitle">Enter the Book's title:</label>
-          <input type="text" id="Btitle" name="text" placeholder="Book Title...">
-        <input type="submit">
-   </form>
+   <div class="typewriter">
+    <form method="POST">
+            <center>Book Search</center>
+            <input type="text" id="Btitle" name="text" placeholder="Book Title...">
+            <input type="submit">
+    </form>
+   </div>
    <button onclick="window.location.href = 'http://127.0.0.1:5000/'">Another Search</button>
-   <h4>Siddarth Kotthur</h4>
-   <h5>Webscraped project : https://www.goodreads.com</h5>
+   <div class="typewriter">
+    <h1>Siddarth Kotthur<br>Information from https://www.goodreads.com</h1>
    </body>
+   </div>
 </html>
